# grapesy-lightningd

./: .gitignore  README.md  flake.nix
.github/workflows/: ci-nix.yaml
grapesy-lightningd/: CHANGELOG.md  README.md  grapesy-lightningd.cabal
grapesy-lightningd-testing/: CHANGELOG.md  README.md  grapesy-lightningd-testing.cabal
grapesy-lightningd-testing/src/: Alice.hs
grapesy-lightningd/src/Network/GRPC/: Lightningd.hs
grapesy-lightningd/src/Network/GRPC/Lightningd/Client/: Simple.hs
nix/: coding-standards.nix  configuration.nix  packages.nix  systems.nix  test-system.nix
proto-lens-lightningd/: CHANGELOG.md  README.md  proto-lens-lightningd.cabal
proto-lens-lightningd/proto/lightningd/: node.proto
proto-lens-lightningd/src/Proto/API/: Lightningd.hs
