cabal-version:      2.2
name:               grapesy-lightningd-testing
version:            0.1.0
synopsis:           grapesy-lightningd-testing - Tests for grapesy-lightningd
author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.14 && <5
  default-language:   GHC2021
  ghc-options:        -Wall -Wmissing-import-lists
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

executable alice
  import:         lang
  main-is:        Alice.hs
  hs-source-dirs: src
  build-depends:
    , bytestring
    , grapesy
    , grapesy-lightningd
