cabal-version:      2.2
name:               proto-lens-lightningd
version:            0.1.0
synopsis:
  proto-lens-lightningd - protobuffer lenses for lightningd provided by protoc-lens-protoc

author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

extra-source-files:
  proto/lightningd/node.proto
  proto/lightningd/primitives.proto

custom-setup
  setup-depends:
    , base              >=4.14 && <5
    , Cabal             >=3.0  && <4
    , proto-lens-setup  >=0.4  && <0.5

common lang
  build-depends:      base >=4.14 && <5
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

library
  import:             lang
  hs-source-dirs:     src
  build-tool-depends: proto-lens-protoc:proto-lens-protoc
  build-depends:
    , proto-lens-protobuf-types  >=0.7 && <0.8
    , proto-lens-runtime         >=0.7 && <0.8

  exposed-modules:    Proto.API.Lightningd
  other-modules:
    Proto.Lightningd.Node
    Proto.Lightningd.Primitives

  autogen-modules:
    Proto.Lightningd.Node
    Proto.Lightningd.Primitives
